la til noen enkle felter

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -8,7 +8,17 @@
 <body>
     <h3>Bane-nor byggliste</h3>
 
-    <input type="text" title="Byggnavn" value="Byggnavn">
+    <input type="text" title="Id" placeholder="Id">
+    <input type="text" title="Linje" placeholder="Linje">
+    <input type="text" title="Distrikt" placeholder="Distrikt">
+    <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
+    <input type="text" title="Kompleks" placeholder="Kompleks">
+    <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
+    <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
+    <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
+    <input type="text" title="Bygg" placeholder="Bygg">
+    <input type="text" title="Byggnavn" placeholder="Byggnavn">
+    <input type="text" title="Merknad" placeholder="Merknad">
 
 </body>
 </html>
