la til ekspanderbare lister

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -48,6 +48,56 @@
 <li class="mdl-list__item">
     <span class="mdl-list__item-primary-content"></span>
 </li>
+    <details class="mdl-expansion">
+        <summary class="mdl-expansion__summary">
+            <span class="mdl-expansion__header">Trip name</span>
+            <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
+        </summary>
+    </details>
+    <details class="mdl-expansion">
+        <summary class="mdl-expansion__summary">
+            <span class="mdl-expansion__header">Location</span>
+            <span class="mdl-expansion__secondary-content">Barbados</span>
+        </summary>
+
+        <div class="mdl-expansion__content">
+            <select>
+                <option>One</option>
+                <option>two</option>
+            </select>
+        </div>
+        <div class="mdl-expansion__actions">
+            <button class="mdl-expansion__action">Save</button>
+            <button class="mdl-expansion__action">Cancel</button>
+        </div>
+    </details>
+    <details class="mdl-expansion">
+        <summary class="mdl-expansion__summary">
+            <span class="mdl-expansion__header">Start and end dates</span>
+            <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
+            <span class="mdl-expansion__secondary-content">End date: Not set</span>
+        </summary>
+    </details>
+    <details class="mdl-expansion">
+        <summary class="mdl-expansion__summary">
+            <span class="mdl-expansion__header">Carrier</span>
+            <span class="mdl-expansion__secondary-content">The best cruise line</span>
+        </summary>
+    </details>
+    <details class="mdl-expansion">
+        <summary class="mdl-expansion__summary">
+    <span class="mdl-expansion__header">
+      Meal preferences
+      <span class="mdl-expansion__subheader">
+        Optional
+      </span>
+    </span>
+            <span class="mdl-expansion__secondary-content">
+      Vegetarian
+    </span>
+        </summary>
+    </details>
+
 </ul>
     <input type="text" title="Id" placeholder="Id">
     <input type="text" title="Linje" placeholder="Linje">
