--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -10,105 +10,105 @@
 
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-<header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">Bane NOR Byggskjema</span>
-        <!-- Add spacer, to align navigation to the right -->
-        <div class="mdl-layout-spacer"></div>
-        <!-- Navigation. We hide it in small screens. -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">Bane NOR Byggskjema</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+            <!-- Navigation. We hide it in small screens. -->
+            <nav class="mdl-navigation mdl-layout--large-screen-only">
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Title</span>
+        <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
         </nav>
     </div>
-</header>
-<div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
-    <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-    </nav>
-</div>
-<main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
-</main>
-</div>
-<ul class='mdl-list'>
-<li class="mdl-list__item">
-    <span class="mdl-list__item-primary-content"></span>
-</li>
-<li class="mdl-list__item">
-    <span class="mdl-list__item-primary-content"></span>
-</li>
-<li class="mdl-list__item">
-    <span class="mdl-list__item-primary-content"></span>
-</li>
-    <details class="mdl-expansion">
-        <summary class="mdl-expansion__summary">
-            <span class="mdl-expansion__header">Trip name</span>
-            <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
-        </summary>
-    </details>
-    <details class="mdl-expansion">
-        <summary class="mdl-expansion__summary">
-            <span class="mdl-expansion__header">Location</span>
-            <span class="mdl-expansion__secondary-content">Barbados</span>
-        </summary>
+    <main class="mdl-layout__content">
+        <div class="page-content"></div>
+        <ul class='mdl-list'>
+            <li class="mdl-list__item">
+                <span class="mdl-list__item-primary-content"></span>
+            </li>
+            <li class="mdl-list__item">
+                <span class="mdl-list__item-primary-content"></span>
+            </li>
+            <li class="mdl-list__item">
+                <span class="mdl-list__item-primary-content"></span>
+            </li>
+            <details class="mdl-expansion">
+                <summary class="mdl-expansion__summary">
+                    <span class="mdl-expansion__header">Trip name</span>
+                    <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
+                </summary>
+            </details>
+            <details class="mdl-expansion">
+                <summary class="mdl-expansion__summary">
+                    <span class="mdl-expansion__header">Location</span>
+                    <span class="mdl-expansion__secondary-content">Barbados</span>
+                </summary>
 
-        <div class="mdl-expansion__content">
-            <select>
-                <option>One</option>
-                <option>two</option>
-            </select>
-        </div>
-        <div class="mdl-expansion__actions">
-            <button class="mdl-expansion__action">Save</button>
-            <button class="mdl-expansion__action">Cancel</button>
-        </div>
-    </details>
-    <details class="mdl-expansion">
-        <summary class="mdl-expansion__summary">
-            <span class="mdl-expansion__header">Start and end dates</span>
-            <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
-            <span class="mdl-expansion__secondary-content">End date: Not set</span>
-        </summary>
-    </details>
-    <details class="mdl-expansion">
-        <summary class="mdl-expansion__summary">
-            <span class="mdl-expansion__header">Carrier</span>
-            <span class="mdl-expansion__secondary-content">The best cruise line</span>
-        </summary>
-    </details>
-    <details class="mdl-expansion">
-        <summary class="mdl-expansion__summary">
+                <div class="mdl-expansion__content">
+                    <select>
+                        <option>One</option>
+                        <option>two</option>
+                    </select>
+                </div>
+                <div class="mdl-expansion__actions">
+                    <button class="mdl-expansion__action">Save</button>
+                    <button class="mdl-expansion__action">Cancel</button>
+                </div>
+            </details>
+            <details class="mdl-expansion">
+                <summary class="mdl-expansion__summary">
+                    <span class="mdl-expansion__header">Start and end dates</span>
+                    <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
+                    <span class="mdl-expansion__secondary-content">End date: Not set</span>
+                </summary>
+            </details>
+            <details class="mdl-expansion">
+                <summary class="mdl-expansion__summary">
+                    <span class="mdl-expansion__header">Carrier</span>
+                    <span class="mdl-expansion__secondary-content">The best cruise line</span>
+                </summary>
+            </details>
+            <details class="mdl-expansion">
+                <summary class="mdl-expansion__summary">
     <span class="mdl-expansion__header">
       Meal preferences
       <span class="mdl-expansion__subheader">
         Optional
       </span>
     </span>
-            <span class="mdl-expansion__secondary-content">
+                    <span class="mdl-expansion__secondary-content">
       Vegetarian
     </span>
-        </summary>
-    </details>
+                </summary>
+            </details>
+        </ul>
+        <input type="text" title="Id" placeholder="Id">
+        <input type="text" title="Linje" placeholder="Linje">
+        <input type="text" title="Distrikt" placeholder="Distrikt">
+        <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
+        <input type="text" title="Kompleks" placeholder="Kompleks">
+        <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
+        <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
+        <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
+        <input type="text" title="Bygg" placeholder="Bygg">
+        <input type="text" title="Byggnavn" placeholder="Byggnavn">
+        <input type="text" title="Merknad" placeholder="Merknad">
 
-</ul>
-    <input type="text" title="Id" placeholder="Id">
-    <input type="text" title="Linje" placeholder="Linje">
-    <input type="text" title="Distrikt" placeholder="Distrikt">
-    <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
-    <input type="text" title="Kompleks" placeholder="Kompleks">
-    <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
-    <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
-    <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
-    <input type="text" title="Bygg" placeholder="Bygg">
-    <input type="text" title="Byggnavn" placeholder="Byggnavn">
-    <input type="text" title="Merknad" placeholder="Merknad">
+    </main>
+</div>
 </body>
 </html>
