la til ekspanderbare lister

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -5,9 +5,11 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel = "stylesheet"
+          type = "text/css"
+          href = "../Style.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
-
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
@@ -36,65 +38,55 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content"></div>
-        <ul class='mdl-list'>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content"></span>
-            </li>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content"></span>
-            </li>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content"></span>
-            </li>
-            <details class="mdl-expansion">
-                <summary class="mdl-expansion__summary">
-                    <span class="mdl-expansion__header">Trip name</span>
-                    <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
-                </summary>
-            </details>
-            <details class="mdl-expansion">
-                <summary class="mdl-expansion__summary">
-                    <span class="mdl-expansion__header">Location</span>
-                    <span class="mdl-expansion__secondary-content">Barbados</span>
-                </summary>
+        <details class="mdl-expansion">
+            <summary class="mdl-expansion__summary">
+                <span class="mdl-expansion__header">Trip name</span>
+                <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
+            </summary>
+        </details>
+        <details class="mdl-expansion">
+            <summary class="mdl-expansion__summary">
+                <span class="mdl-expansion__header">Location</span>
+                <span class="mdl-expansion__secondary-content">Barbados</span>
+            </summary>
 
-                <div class="mdl-expansion__content">
-                    <select>
-                        <option>One</option>
-                        <option>two</option>
-                    </select>
-                </div>
-                <div class="mdl-expansion__actions">
-                    <button class="mdl-expansion__action">Save</button>
-                    <button class="mdl-expansion__action">Cancel</button>
-                </div>
-            </details>
-            <details class="mdl-expansion">
-                <summary class="mdl-expansion__summary">
-                    <span class="mdl-expansion__header">Start and end dates</span>
-                    <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
-                    <span class="mdl-expansion__secondary-content">End date: Not set</span>
-                </summary>
-            </details>
-            <details class="mdl-expansion">
-                <summary class="mdl-expansion__summary">
-                    <span class="mdl-expansion__header">Carrier</span>
-                    <span class="mdl-expansion__secondary-content">The best cruise line</span>
-                </summary>
-            </details>
-            <details class="mdl-expansion">
-                <summary class="mdl-expansion__summary">
+            <div class="mdl-expansion__content">
+                <select>
+                    <option>One</option>
+                    <option>two</option>
+                </select>
+            </div>
+            <div class="mdl-expansion__actions">
+                <button class="mdl-expansion__action">Save</button>
+                <button class="mdl-expansion__action">Cancel</button>
+            </div>
+        </details>
+        <details class="mdl-expansion">
+            <summary class="mdl-expansion__summary">
+                <span class="mdl-expansion__header">Start and end dates</span>
+                <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
+                <span class="mdl-expansion__secondary-content">End date: Not set</span>
+            </summary>
+        </details>
+        <details class="mdl-expansion">
+            <summary class="mdl-expansion__summary">
+                <span class="mdl-expansion__header">Carrier</span>
+                <span class="mdl-expansion__secondary-content">The best cruise line</span>
+            </summary>
+        </details>
+        <details class="mdl-expansion">
+            <summary class="mdl-expansion__summary">
     <span class="mdl-expansion__header">
       Meal preferences
       <span class="mdl-expansion__subheader">
         Optional
       </span>
     </span>
-                    <span class="mdl-expansion__secondary-content">
+    <span class="mdl-expansion__secondary-content">
       Vegetarian
     </span>
-                </summary>
-            </details>
+            </summary>
+        </details>
         </ul>
         <input type="text" title="Id" placeholder="Id">
         <input type="text" title="Linje" placeholder="Linje">
