la input felter i expandable listen ogla inn ordentlige navn

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -40,16 +40,8 @@
         <div class="page-content"></div>
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Trip name</span>
-                <span class="mdl-expansion__secondary-content">Caribbean Cruise</span>
+                <span class="mdl-expansion__header">Kompleksinfo</span>
             </summary>
-        </details>
-        <details class="mdl-expansion">
-            <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Location</span>
-                <span class="mdl-expansion__secondary-content">Barbados</span>
-            </summary>
-
             <div class="mdl-expansion__content">
                 <select>
                     <option>One</option>
@@ -63,43 +55,41 @@
         </details>
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Start and end dates</span>
-                <span class="mdl-expansion__secondary-content">Start date: Feb 29, 2016</span>
-                <span class="mdl-expansion__secondary-content">End date: Not set</span>
+                <span class="mdl-expansion__header">Kontaktpersoner</span>
             </summary>
+            <div class="mdl-expansion__content">
+                <input type="text" title="Id" placeholder="Id">
+                <input type="text" title="Linje" placeholder="Linje">
+                <input type="text" title="Distrikt" placeholder="Distrikt">
+                <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
+                <input type="text" title="Kompleks" placeholder="Kompleks">
+                <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
+                <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
+                <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
+                <input type="text" title="Bygg" placeholder="Bygg">
+                <input type="text" title="Byggnavn" placeholder="Byggnavn">
+                <input type="text" title="Merknad" placeholder="Merknad">
+            </div>
+            <div class="mdl-expansion__actions">
+                <button class="mdl-expansion__action">Save</button>
+                <button class="mdl-expansion__action">Cancel</button>
+            </div>
         </details>
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Carrier</span>
-                <span class="mdl-expansion__secondary-content">The best cruise line</span>
+                <span class="mdl-expansion__header">Bygginfo</span>
             </summary>
+            <div class="mdl-expansion__content">
+                <select>
+                    <option>One</option>
+                    <option>two</option>
+                </select>
+            </div>
+            <div class="mdl-expansion__actions">
+                <button class="mdl-expansion__action">Save</button>
+                <button class="mdl-expansion__action">Cancel</button>
+            </div>
         </details>
-        <details class="mdl-expansion">
-            <summary class="mdl-expansion__summary">
-    <span class="mdl-expansion__header">
-      Meal preferences
-      <span class="mdl-expansion__subheader">
-        Optional
-      </span>
-    </span>
-    <span class="mdl-expansion__secondary-content">
-      Vegetarian
-    </span>
-            </summary>
-        </details>
-        </ul>
-        <input type="text" title="Id" placeholder="Id">
-        <input type="text" title="Linje" placeholder="Linje">
-        <input type="text" title="Distrikt" placeholder="Distrikt">
-        <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
-        <input type="text" title="Kompleks" placeholder="Kompleks">
-        <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
-        <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
-        <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
-        <input type="text" title="Bygg" placeholder="Bygg">
-        <input type="text" title="Byggnavn" placeholder="Byggnavn">
-        <input type="text" title="Merknad" placeholder="Merknad">
-
     </main>
 </div>
 </body>
