--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel = "stylesheet"
           type = "text/css"
-          href = "../Style.css" />
+          href = "../views/Style.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
