la input felter i expandable listen ogla inn ordentlige navn

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -43,10 +43,26 @@
                 <span class="mdl-expansion__header">Kompleksinfo</span>
             </summary>
             <div class="mdl-expansion__content">
-                <select>
-                    <option>One</option>
-                    <option>two</option>
-                </select>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Id">
+                    <label class="mdl-textfield__label" for="Id">Id</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Linje">
+                    <label class="mdl-textfield__label" for="Linje">Linje</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Distrikt">
+                    <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
+                </div>
+                    <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
+                    <input type="text" title="Kompleks" placeholder="Kompleks">
+                    <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
+                    <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
+                    <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
+                    <input type="text" title="Bygg" placeholder="Bygg">
+                    <input type="text" title="Byggnavn" placeholder="Byggnavn">
+                    <input type="text" title="Merknad" placeholder="Merknad">
             </div>
             <div class="mdl-expansion__actions">
                 <button class="mdl-expansion__action">Save</button>
@@ -57,19 +73,7 @@
             <summary class="mdl-expansion__summary">
                 <span class="mdl-expansion__header">Kontaktpersoner</span>
             </summary>
-            <div class="mdl-expansion__content">
-                <input type="text" title="Id" placeholder="Id">
-                <input type="text" title="Linje" placeholder="Linje">
-                <input type="text" title="Distrikt" placeholder="Distrikt">
-                <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
-                <input type="text" title="Kompleks" placeholder="Kompleks">
-                <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
-                <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
-                <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
-                <input type="text" title="Bygg" placeholder="Bygg">
-                <input type="text" title="Byggnavn" placeholder="Byggnavn">
-                <input type="text" title="Merknad" placeholder="Merknad">
-            </div>
+
             <div class="mdl-expansion__actions">
                 <button class="mdl-expansion__action">Save</button>
                 <button class="mdl-expansion__action">Cancel</button>
