la input felter i expandable listen ogla inn ordentlige navn

--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -55,14 +55,30 @@
                     <input class="mdl-textfield__input" type="text" id="Distrikt">
                     <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
                 </div>
-                    <input type="text" title="DistriktNavn" placeholder="Distrikt Navn">
-                    <input type="text" title="Kompleks" placeholder="Kompleks">
-                    <input type="text" title="KompleksNavn" placeholder="Kompleks Navn">
-                    <input type="text" title="ByggnrIJBV" placeholder="Byggnr i JBV">
-                    <input type="text" title="NavnILydiaJBV" placeholder="Navn i Lydia JBV">
-                    <input type="text" title="Bygg" placeholder="Bygg">
-                    <input type="text" title="Byggnavn" placeholder="Byggnavn">
-                    <input type="text" title="Merknad" placeholder="Merknad">
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Kompleks">
+                    <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
+                    <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
+                    <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Bygg">
+                    <label class="mdl-textfield__label" for="Bygg">Bygg</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Bygg">
+                    <label class="mdl-textfield__label" for="Bygg">Bygg</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="Merknad">
+                    <label class="mdl-textfield__label" for="Merknad">Merknad</label>
+                </div>
             </div>
             <div class="mdl-expansion__actions">
                 <button class="mdl-expansion__action">Save</button>
