--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -20,10 +20,7 @@
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Eksport til Excel</a>
             </nav>
         </div>
     </header>
@@ -81,8 +78,12 @@
                 </div>
             </div>
             <div class="mdl-expansion__actions">
-                <button class="mdl-expansion__action">Save</button>
-                <button class="mdl-expansion__action">Cancel</button>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    Lagre
+                </button>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                    Avbryt
+                </button>
             </div>
         </details>
         <details class="mdl-expansion">
