--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -34,48 +34,59 @@
         </nav>
     </div>
     <main class="mdl-layout__content">
-        <div class="page-content"></div>
+        <div class="page-content" style="justify-content: center"></div>
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
                 <span class="mdl-expansion__header">Kompleksinfo</span>
             </summary>
             <div class="mdl-expansion__content">
-                <div class="mdl-textfield mdl-js-textfield">
+                <ul class="mdl-list">
+                <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Id">
                     <label class="mdl-textfield__label" for="Id">Id</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Linje">
                     <label class="mdl-textfield__label" for="Linje">Linje</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li> <div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Distrikt">
                     <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
-                </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                </div></li>
+
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Kompleks">
                     <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
                     <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
                     <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Bygg">
                     <label class="mdl-textfield__label" for="Bygg">Bygg</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Bygg">
                     <label class="mdl-textfield__label" for="Bygg">Bygg</label>
                 </div>
-                <div class="mdl-textfield mdl-js-textfield">
+                    </li>
+                    <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Merknad">
                     <label class="mdl-textfield__label" for="Merknad">Merknad</label>
                 </div>
+                    </li>
+                    </ul>
             </div>
             <div class="mdl-expansion__actions">
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
