--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -34,12 +34,12 @@
         </nav>
     </div>
     <main class="mdl-layout__content">
-        <div class="page-content" style="justify-content: center"></div>
+        <div class="page-content mdl-grid center-items">
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
                 <span class="mdl-expansion__header">Kompleksinfo</span>
             </summary>
-            <div class="mdl-expansion__content">
+            <div class="mdl-expansion__content mdl-grid center-items">
                 <ul class="mdl-list">
                 <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="Id">
@@ -69,11 +69,6 @@
                     <li><div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
                     <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Bygg">
-                    <label class="mdl-textfield__label" for="Bygg">Bygg</label>
                 </div>
                     </li>
                     <li><div class="mdl-textfield mdl-js-textfield">
@@ -122,6 +117,7 @@
                 <button class="mdl-expansion__action">Cancel</button>
             </div>
         </details>
+        </div>
     </main>
 </div>
 </body>
