--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -35,6 +35,7 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content mdl-grid center-items">
+            <ul class="mdl-list">
         <details class="mdl-expansion">
             <summary class="mdl-expansion__summary">
                 <span class="mdl-expansion__header">Kompleksinfo</span>
@@ -117,6 +118,7 @@
                 <button class="mdl-expansion__action">Cancel</button>
             </div>
         </details>
+            </ul>
         </div>
     </main>
 </div>
